priceterier prototype - added menu topslevy

--- a/www.hlidacshopu.cz/src/html/index.njk
+++ b/www.hlidacshopu.cz/src/html/index.njk
@@ -539,6 +539,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Nejzajímavější slevy</h2>
         <p>
+          Podívejte se na <b class="text--purple"
+          ><a href="/topslevy">Top slevy</a></b>.
           Sledujte naše profily na
           <b class="text--purple"
           ><a href="https://www.facebook.com/hlidacshopu/">Facebooku</a></b
