--- a/www.hlidacshopu.cz/src/html/layouts/master.njk
+++ b/www.hlidacshopu.cz/src/html/layouts/master.njk
@@ -135,6 +135,7 @@
         <nav id="navigation" class="menu">
           <ul class="menu__list">
             <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
+            <li class="list_item"><a href="/topslevy">Top slevy</a></li>
             <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
             <li class="list_item"><a href="/media/">Napsali o nás</a></li>
             <li class="list_item"><a href="/dashboard/">Naše data</a></li>
