--- a/www.hlidacshopu.cz/src/html/topslevy/kcslevy/index.njk
+++ b/www.hlidacshopu.cz/src/html/topslevy/kcslevy/index.njk
@@ -75,7 +75,7 @@
                   <th scope="col">Cena po slevě v Kč</th>
                   <th scope="col">Původní cena v Kč</th>
                   <th scope="col">Reálná sleva v %</th>
-                  <th scope="col" style="white-space: nowrap;">Zlevněno od data</th>
+                  <th scope="col">Zlevněno od data</th>
                   <th scope="col">Produkt</th>
                   <th scope="col">Eshop</th>
                 </tr>
