ARX - dostylizování issues

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -85,7 +85,7 @@
   <section class="believes">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="text-center believes__intro mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <svg width="144" height="133" viewBox="0 0 144 133" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>[Icon] Our Believes</title>
             <path
