ARX - změna názvů class

--- a/arx.monks.cloud/src/html/strategy/index.njk
+++ b/arx.monks.cloud/src/html/strategy/index.njk
@@ -34,8 +34,8 @@
       </div>
     </div>
     <div class="row-1">
-      <div class="column-1 ovocna-zmrzlina">
-        <div class="jahudka">
+      <div class="column-1 column__appendix">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Succession Situations of Family Businesses</h3>
           <p>This is our favorite type of transaction. The owners would like to divest
             entirely from the business in order to pursue other opportunities, or partially
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="column-2">
-        <div class="boruvka">
+        <div class="column-2__inner-box">
           <h3 class="underline--light">Corporate<br>Divestitures</h3>
           <p>A&nbsp;corporation seeking to divest a Central European subsidiary.</p>
         </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="row-2">
       <div class="box--dark box--specific-height column-1">
-        <div class="jahudka">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Management Buyouts (MBO) / Buy-ins (MBI)</h3>
           <p>Managers of a company would like to become co-owners of the business, or an
             outside management team would like to acquire a company with our financial
@@ -60,7 +60,7 @@
       </div>
       <div
         class="box--yellow box--specific-height column-2">
-        <div class="boruvka">
+        <div class="column-2__inner-box">
           <h3 class="underline--dark">Growth Equity</h3>
           <p>A&nbsp;company seeking capital to strengthen its market position, acquire a
             complementary business or fund a significant capex investment.</p>
@@ -69,8 +69,8 @@
     </div>
     <div class="row-3">
       <div
-        class="column-1 ovocna-zmrzlina">
-        <div class="jahudka">
+        class="column-1 column__appendix">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Financial Restructuring</h3>
           <p>A&nbsp;company seeking capital to help get through a period of financial or
             operational&nbsp;stress.</p>
