--- a/arx.monks.cloud/src/html/work-with-us/index.njk
+++ b/arx.monks.cloud/src/html/work-with-us/index.njk
@@ -32,8 +32,8 @@
       </div>
     </div>
     <div class="row-1">
-      <div class="column-1 ovocna-zmrzlina">
-        <div class="jahudka">
+      <div class="column-1 column__appendix">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Expansion through acquisitions or new markets</h3>
           <p>Over half of the ARX investments over the last decade have achieved growth
             through completing an add-on acquisition or entering a new geographic market.
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="column-2">
-        <div class="boruvka">
+        <div class="column-2__inner-box">
           <h3 class="underline--light">Introducing the right people</h3>
           <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
             management teams and boards.</p>
@@ -51,7 +51,7 @@
     </div>
     <div class="row-2">
       <div class="box--dark box--colored column-1">
-        <div class="jahudka">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Keeping debt levels low</h3>
           <p>We don’t believe in burdening our companies with excessive debt. We keep
             debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
@@ -59,7 +59,7 @@
       </div>
       <div
         class="box--yellow box--colored column-2">
-        <div class="boruvka">
+        <div class="column-2__inner-box">
           <h3 class="underline--dark">Positioning businesses for the future</h3>
           <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
             strategic buyers.</p>
@@ -68,8 +68,8 @@
     </div>
     <div class="row-3">
       <div
-        class="column-1 ovocna-zmrzlina">
-        <div class="jahudka">
+        class="column-1 column__appendix">
+        <div class="column-1__inner-box">
           <h3 class="underline--light">Non-executive board development</h3>
           <p>ARX adds value through its systematic approach to introducing best-practice corporate governance, reporting
             standards and strategic guidance.</p>
@@ -110,7 +110,7 @@
   </section>
   <section class="intermediaries">
     <div class="column-1">
-      <div class="jahudka">
+      <div class="column-1__inner-box">
         <h2>Intermediaries</h2>
         <p class="sub-title">For over 20&nbsp;years we&nbsp;have worked with intermediaries of all types&nbsp;&ndash;
           whether individual deal introducers or multinational institutional
@@ -120,8 +120,8 @@
           opportunity to ARX, our approach is consistent:</p>
       </div>
     </div>
-    <div class="column-2 ovocna-zmrzlina">
-      <div class="boruvka">
+    <div class="column-2 column__appendix">
+      <div class="column-2__inner-box">
         <h3 class="underline--light">Responsiveness and transparency</h3>
         <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level
           of interest in a
