--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -9,8 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div
-          class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p><span>We are proud of our<br>20-year track record</span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
@@ -31,7 +30,7 @@
 
   <section class="about">
     <div class="column-1">
-      <div class="jahudka specific-height__box">
+      <div class="column-1__inner-box specific-height__box">
         <h3 class="underline--light">Mission statement</h3>
         <p>Our core objective is to form successful partnerships with owners, managers
           and other stakeholders to realise the full potential of our portfolio companies
@@ -40,7 +39,7 @@
       </div>
     </div>
     <div class="column-2 about__bg specific-height__box">
-      <div class="boruvka">
+      <div class="column-2__inner-box">
         <h3 class="underline--light">Background history</h3>
         <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
           leading private equity firm in its segment operating in the Central European
@@ -174,7 +173,7 @@
 
   <section class="team">
     <div class="column-1">
-      <div class="jahudka">
+      <div class="column-1__inner-box">
         <h3>Meet our team</h3>
         <div class="button">
           <a class="button__info" href="/team/">OUR TEAM</a>
@@ -182,7 +181,7 @@
       </div>
     </div>
     <div class="column-2">
-      <div class="boruvka">
+      <div class="column-2__inner-box">
       </div>
     </div>
   </section>
