--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -276,7 +276,7 @@ footer {
 /* Media Queries*/
 /* Media Queries for Flex Boxes*/
 @media (min-width: 1440px) {
-  .jahudka, .boruvka {
+  .column-1__inner-box, .column-2__inner-box {
     padding: 6em;
   }
   .specific-height__box {
@@ -285,13 +285,13 @@ footer {
 }
 
 @media (min-width: 540px) and (max-width: 1439px) {
-  .jahudka, .boruvka {
+  .column-1__inner-box, .column-2__inner-box {
     padding: 3em;
   }
 }
 
 @media (max-width: 539px) {
-  .jahudka, .boruvka {
+  .column-1__inner-box, .column-2__inner-box {
     padding: 1em;
   }
 }
@@ -305,11 +305,11 @@ footer {
   .column-1 {
     justify-content: flex-end;
   }
-  .jahudka, .boruvka {
+  .column-1__inner-box, .column-2__inner-box {
     box-sizing: border-box;
     max-width: calc(var(--arx-layout-max-width) / 2);
   }
-  .ovocna-zmrzlina {
+  .column__appendix {
     background: var(--mdc-theme--primary);
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.07);
   }
