--- a/arx.monks.cloud/src/stylesheets/work-with-us.scss
+++ b/arx.monks.cloud/src/stylesheets/work-with-us.scss
@@ -56,7 +56,7 @@
   .column-1 {
     color: var(--mdc-theme--primary);
 
-    .jahudka {
+    .column-1__inner-box {
       align-self: center;
     }
 
