ARX - Strategy Boxy @media

--- a/arx.monks.cloud/src/stylesheets/strategy.scss
+++ b/arx.monks.cloud/src/stylesheets/strategy.scss
@@ -43,4 +43,10 @@
   }
 }
 
-
+@media (min-width: 540px) {
+  .column-1, .column-2 {
+    max-width: 50vw;
+    flex-grow: 1;
+    display: flex;
+  }
+}
