priceterier prototype - added product image

--- a/www.hlidacshopu.cz/src/html/topslevy/index.njk
+++ b/www.hlidacshopu.cz/src/html/topslevy/index.njk
@@ -77,12 +77,13 @@
                   <th scope="col">Cena po slevě v Kč</th>
                   <th scope="col">Zlevněno od data</th>
                   <th scope="col">Produkt</th>
+                  <th scope="col">Obrázek</th>
                   <th scope="col">Eshop</th>
                 </tr>
               </thead>
               <tbody id="table-root-percent">
                 <tr>
-                  <td colspan="5">
+                  <td colspan="9">
                     <div class="loading-container">
                       <div class="loader" aria-label="Načítám data…">
                       Chvilku strpení, načítají se data&hellip;
