priceterier prototype - added Show more button

--- a/www.hlidacshopu.cz/src/html/topslevy/index.njk
+++ b/www.hlidacshopu.cz/src/html/topslevy/index.njk
@@ -93,6 +93,7 @@
                 </tr>
               </tbody>
             </table>
+            <div id="below-buttons"></div>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p class="explanation">
