--- a/www.hlidacshopu.cz/src/html/topslevy/index.njk
+++ b/www.hlidacshopu.cz/src/html/topslevy/index.njk
@@ -104,6 +104,14 @@
       </div>
     </div>
   </section>
+  <div id="hlidac-shopu-modal" class="modal modal--hidden">
+    <div class="modal__inner mdc-layout-grid">
+      <div class="modal__close" title="Zavřít - Esc">
+        <a href="/topslevy">&times;</a>
+      </div>
+      <div id="hlidac-shopu-modal__placeholder"></div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block scripts %}
