--- a/www.hookamonk.com/src/stylesheets/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/typography.scss
@@ -4,12 +4,11 @@
 }
 
 body {
-  color: var(--tm-black);
-  background-color: #0A2137;
+  color: var(--hm-black);
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font: 16px/1.5 "Work Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font: 18px/1.5 "Work Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   font-kerning: normal;
