--- a/www.hookamonk.com/src/html/components/header.njk
+++ b/www.hookamonk.com/src/html/components/header.njk
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../assets/css/header.css">
 <header class="tm-app-bar">
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -52,8 +52,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="/eshop/">Eshop</a></li>
-            <li class=""><a href="/meet-us/">I am club owner</a></li>
+            <li><a href="https://shop.hookamonk.com/">Hookamonk e-shop</a></li>
+            <li><a href="#">Lounge app</a></li>
           </ul>
         </nav>
       </div>
