--- a/www.hookamonk.com/src/stylesheets/main.scss
+++ b/www.hookamonk.com/src/stylesheets/main.scss
@@ -4,6 +4,8 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+
+  --hm-btn-transition: all 100ms ease-in-out;
 }
 
 body {
@@ -18,3 +20,26 @@ body {
   --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
 }
+
+
+// BUTTONS START
+.hm-button {
+  display: block;
+  color: var(--hm-black);
+  background-color: var(--hm-white);
+  border-radius: 10px;
+  padding: 20px 30px;
+  width: max-content;
+  margin: 0 auto;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  transition: var(--hm-btn-transition);
+
+  &:hover {
+    background-color: var(--hm-black);
+    color: var(--hm-white);
+  }
+}
+// BUTTONS END
