--- a/www.hookamonk.com/src/stylesheets/header.scss
+++ b/www.hookamonk.com/src/stylesheets/header.scss
@@ -62,7 +62,7 @@
   width: 100vw;
   z-index: 1000;
   top: 0;
-  background-color: var(--tm-secondary);
+  //background-color: var(--tm-secondary);
   @media screen and (max-width: 839px) {
     height: 52px;
     .tm-layout-wrapper {
@@ -85,9 +85,9 @@
 
 .tm-app-bar--sticky {
   //background-color: #fff;
-  .tm-hamburger .tm-hamburger__bar {
-    background-color: rgba(92, 95, 212, 0.1);
-  }
+  //.tm-hamburger .tm-hamburger__bar {
+  //  background-color: rgba(92, 95, 212, 0.1);
+  //}
   //.tm-hamburger .tm-hamburger__container::after {
   //  color: rgba(0, 0, 0, 0.25);
   //}
@@ -114,7 +114,7 @@
     color: #fff;
   }
   .tm-menu {
-    transform: translate(-8px, -64px);
+    transform: translate(-16px, -90px);
     z-index: -1;
   }
 }
@@ -129,7 +129,7 @@
     z-index: 3;
     transition: transform 0.3s;
     overflow: hidden;
-    background-color: var(--tm-secondary);
+    background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
 
     .tm-menu__list li {
