--- a/www.hookamonk.com/src/stylesheets/hero.scss
+++ b/www.hookamonk.com/src/stylesheets/hero.scss
@@ -6,6 +6,9 @@
   padding-top: 20vh;
   font-size: 4em;
   margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
   @media screen and (max-width: 839px) {
     padding-top: 10vh;
     font-size: 3em;
