[www.hookamonk.com] cattering sub page

--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -112,6 +112,25 @@
         <h3>First electronic hookah for tobacco</h3>
         <p>There is no e-liquid in hookamonk. You can use any tobacco you love and enjoy its clear taste.</p>
       </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
+        <h2>Products</h2>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h2>Mobile box</h2>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h2>Table</h2>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      </div>
+
   </div>
 </div>
 {% endblock %}
