--- a/www.hookamonk.com/src/stylesheets/header.scss
+++ b/www.hookamonk.com/src/stylesheets/header.scss
@@ -62,7 +62,7 @@
   width: 100vw;
   z-index: 1000;
   top: 0;
-  //background-color: var(--tm-secondary);
+  transition: var(--tm-btn-transition);
   @media screen and (max-width: 839px) {
     height: 52px;
     .tm-layout-wrapper {
@@ -85,13 +85,11 @@
   //.tm-hamburger .tm-hamburger__container::after {
   //  color: rgba(0, 0, 0, 0.25);
   //}
+  background-color: rgba(0, 0, 0, 0.7);
   @media screen and (min-width: 840px) {
     height: 78px;
     .tm-layout-wrapper {
       padding: 23px 0 0 16px;
-    }
-    + main {
-      margin-top: 78px;
     }
   }
 }
