--- a/www.hookamonk.com/src/stylesheets/header.scss
+++ b/www.hookamonk.com/src/stylesheets/header.scss
@@ -58,7 +58,7 @@
 }
 
 .tm-app-bar {
-  position: fixed;
+  position: absolute;
   width: 100vw;
   z-index: 1000;
   top: 0;
@@ -77,22 +77,22 @@
   }
 }
 
-.tm-app-bar--sticky {
-  //background-color: #fff;
-  //.tm-hamburger .tm-hamburger__bar {
-  //  background-color: rgba(92, 95, 212, 0.1);
-  //}
-  //.tm-hamburger .tm-hamburger__container::after {
-  //  color: rgba(0, 0, 0, 0.25);
-  //}
-  background-color: rgba(0, 0, 0, 0.7);
-  @media screen and (min-width: 840px) {
-    height: 78px;
-    .tm-layout-wrapper {
-      padding: 23px 0 0 16px;
-    }
-  }
-}
+//.tm-app-bar--sticky {
+//  background-color: #fff;
+//  .tm-hamburger .tm-hamburger__bar {
+//    background-color: rgba(92, 95, 212, 0.1);
+//  }
+//  .tm-hamburger .tm-hamburger__container::after {
+//    color: rgba(0, 0, 0, 0.25);
+//  }
+//  background-color: rgba(0, 0, 0, 0.7);
+//  @media screen and (min-width: 840px) {
+//    height: 78px;
+//    .tm-layout-wrapper {
+//      padding: 23px 0 0 16px;
+//    }
+//  }
+//}
 
 .tm-app-bar.tm-app-bar--open {
   color: #fff;
@@ -115,13 +115,12 @@
     width: 100vw;
     height: 100vh;
     padding-top: 64px;
-    transform: translate(calc(-100vw - 12px), -64px);
-    transform: translate(calc(-140vw - 12px), -64px);
+    transform: translate(calc(-140vw - 12px), 0);
     position: fixed;
     z-index: 3;
     transition: transform 0.3s;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
 
     .tm-menu__list li {
