[www.hookamonk.com] Button hover color updated

--- a/www.hookamonk.com/src/stylesheets/main.scss
+++ b/www.hookamonk.com/src/stylesheets/main.scss
@@ -38,8 +38,7 @@ body {
   transition: var(--hm-btn-transition);
 
   &:hover {
-    background-color: var(--hm-black);
-    color: var(--hm-white);
+    background-color: #ECA340;
   }
 }
 // BUTTONS END
