--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -52,6 +52,15 @@
         background-size: cover;
       }
     }
+    .hm-hero__header {
+      padding-top: 20vh;
+    }
+    @media screen and (max-width: 839px) {
+      .hm-hero__header {
+        padding-top: 10vh;
+      }
+    }
+
   </style>
 {% endblock %}
 
