Fix typos in scrset notations

--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -154,7 +154,7 @@
              width="90%"
              src="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }}"
              srcset="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x
+                     {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=2) }} 2x"/>
       </div>
 
