--- a/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
+++ b/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.njk
@@ -96,7 +96,7 @@
                  alt="[photo] our TopMonks team dedicated to Česká Spořitelna WebAPI development"
                  src="{{ "topmonks.com/cs_hero_1.png" | cloudinaryUrl(width=545) }}"
                  srcset="{{ "topmonks.com/cs_hero_1.png" | cloudinaryUrl(width=545) }} 1x,
-                         {{ "topmonks.com/cs_hero_1.png" | cloudinaryUrl(width=545,dpr=1.5) }} 1.5x
+                         {{ "topmonks.com/cs_hero_1.png" | cloudinaryUrl(width=545,dpr=1.5) }} 1.5x,
                          {{ "topmonks.com/cs_hero_1.png" | cloudinaryUrl(width=545,dpr=2) }} 2x"/>
           </div>
         </div>
