--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -84,34 +84,19 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>Heating only by electronics</h3>
-        <p>The are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated same way as in classic hookah, but charcoals are replaced by spiral.
+        <p>There are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated same way as in classic hookah only charcoals are replaced by spiral.
         </p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>You pay as you smoke</h3>
-        <p>Hookamonk is not for sell. Lounges pay only for finished sessions.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>Smart inhale detection</h3>
-        <p>Electronic head react on inhales. When you breathe in it will warm the tobacco, when you don't smoke it remains the temperature.
+        <p>Electronic head react on inhales. When you breathe in it will warm the tobacco, when you don't smoke it remains the temperature.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>No staff</h3>
+        <p>You need shishaman only to fill the bowl by tobacco. There is no need to take care about charcoals and change them during the session.
         </p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>Lounge app to track sessions</h3>
-        <p>Website you can open on your phone, tablet or computer. Stuff can easily see running sessions. You start session in this app. Informations about finished sessions</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>No stuff needed to take care about hookarians</h3>
-        <p>You need shishaman onl to fill the bowl by tobacco. There is no need to take care about charcoals and change them during the session.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>New features updated automatically</h3>
-        <p>Hookah is still connected to wifi. You will receive every update automatically.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -120,10 +105,41 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>You pay as you smoke</h3>
+        <p>Hookamonk is not for sell. Lounges pay only for finished sessions.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>New features updated automatically</h3>
+        <p>Hookah is still connected to wifi. You will receive every update automatically.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>First electronic hookah for tobacco</h3>
         <p>There is no e-liquid in hookamonk. You can use any tobacco you love and enjoy its clear taste.</p>
       </div>
       <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Intensity regulation</h3>
+        <p>If you like your hookah stronger or smoother you can change its intensity on display or in your mobile app.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Compatibility with other hookahs</h3>
+        <p>Electronic head is possible to place on most usual hookahs, heat managements and bowls.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Lounge app</h3>
+        <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Mobile app</h3>
+        <p>Mobile app for Android and iOS. You can use it to change intensity of your hookah or create diary with your session.</p>
+      </div>
+      <div
+      
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
         <h2 class="hm-h2">Products</h2>
       </div>
@@ -140,12 +156,12 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3 class="hm-h2">Mobile box</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean id metus id velit ullamcorper pulvinar.</p>
+        <p>Portable version of hookamonk. It's possible to use it with any table you have. You need only source of electricity and wifi connection.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3 class="hm-h2">Table</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean id metus id velit ullamcorper pulvinar.</p>
+        <p>Specific table designed for hookamonk. Display is installed in. All electronic is installed in. You only add shisha with an electronic head.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
