Add Text (advantage)

--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -130,6 +130,11 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Consistent taste</h3>
+        <p>With hookamonk taste of tobacco remains still the same during the session. </p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>Lounge app</h3>
         <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs</p>
       </div>
