--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -10,14 +10,14 @@
 
 {% block head %}
   <meta name="description"
-        content="Hookamonk is an exclusive hand-made equipment for your hookah to make it wholly electronic while allowing you smoking* genuine tobacco, not any e-liquid imitations.">
+        content="First fully electronic hookah for tobacco.">
   <meta name="twitter:description" property="og:description"
-        content="Hookamonk is an exclusive hand-made equipment for your hookah to make it wholly electronic while allowing you smoking* genuine tobacco, not any e-liquid imitations.">
+        content="First fully electronic hookah for tobacco.">
   <link rel="canonical" href="https://www.hookamonk.com/">
-  {#  <meta name="twitter:card" content="summary_large_image">#}
-  {#  <meta name="twitter:site" content="@topmonks">#}
-  {#  <meta name="twitter:title" property="og:title" content="TopMonks - Software development partner for your business">#}
-  {#  <meta name="twitter:image" property="og:image" content="https://www.topmonks.com/images/og-image.png">#}
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@topmonks">
+  <meta name="twitter:title" property="og:title" content="Game changer in hookah.">
+  <meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/assets/og-image.jpg">
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.hookamonk.com/">
   <meta property="og:site_name" content="hookamonk.com">
@@ -144,7 +144,7 @@
         <p>Mobile app for Android and iOS. You can use it to change intensity of your hookah or create diary with your session.</p>
       </div>
       <div
-      
+
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
         <h2 class="hm-h2">Products</h2>
       </div>
