--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -22,6 +22,8 @@
   <meta property="og:url" content="https://www.hookamonk.com/">
   <meta property="og:site_name" content="hookamonk.com">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -29,6 +31,7 @@
 
     gtag('config', 'UA-51368639-11');
   </script>
+
 
   <style>
     body {
