--- a/www.hookamonk.com/src/stylesheets/cattering.scss
+++ b/www.hookamonk.com/src/stylesheets/cattering.scss
@@ -1,6 +1,6 @@
 .hm-section-features {
   p {
-    color: #5e5e5e;
+    color: var(--hm-grey);
   }
 };
 
@@ -9,7 +9,7 @@
   .material-icons {
     display: block;
     margin: 2em 1em 0 0;
-    color: #502CCC;
+    color: var(--hm-violet);
     svg {
       width: 36px;
       height: 36px;
